Thu May 18 20:28:00 UTC 2006 Roopa Pundaleeka <roopa@txcorp.com>

        * examples/Display/GPS/GPS_Impl.ccd:
        * examples/Display/NavDisplay/NavDisplay_Impl.ccd:
        * examples/Display/RateGen/RateGen_Impl.ccd:

        Removed these generated files from CVS.

Thu May 18 11:28:52 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>


        * examples/Display/Display_Base/GNUmakefile:
        * examples/Display/Display_Base/GNUmakefile.Display_Base_stub:
        * examples/Display/Display_Base/GNUmakefile.Display_Base_svnt:

          Removed these files from CVS.

Wed May 17 21:20:46 UTC 2006 Roopa Pundaleeka <roopa@txcorp.com>

        * TAO/CIAO/examples/Display:
          Ported the Display example to use the new CIAO framework


Tue May 16 12:10:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * README:
          Removed mentioning of vc6

Mon May 15 20:48:52 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp (generate):

          Removed commented-out code.

        * CIDLC/ServantHeaderGenerator.cpp (generate_facets):

          Fixed cut-and-paste error that was causing facet servant
          class declaration to get skipped when the composition is
          defined inside one or more IDL modules.

Fri May 12 07:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Utils/Functors.h:
          Added a workaround for specific for BCB6, should fix the gcc4
          internal compiler errors

Fri May 12 07:29:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          The work around is needed for < gcc 3.3 and also BCB6, so make
          it a little bit more easier to handle this.

Thu May 11 21:24:45 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/Literals.cpp:
        * CIDLC/Literals.hpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.hpp: